# Publisher-v2

./: .env.example  .gitignore  Makefile  README.md  README_CLEAN.md  audit_v2_avec_exceptions.sh  dashboard.html  encode_secrets.py  last_activity.txt  nettoyage_final_agressif.sh  operation_titan_v2.sh  pyproject.toml  requirements.txt  setup_local.sh  titan_colossal_v3.sh  verifier_nettoyage_final.sh
.github/activity-logs/: history.txt
.github/keep-alive/: README.md  timestamp.txt
.github/pages/: index.html
.github/workflows/: fallback-runners.yml  heartbeat.yml  keep-alive.yml  keep_alive.yml  monitor.yml  publisher.yml  tiktok.yml  tiktok_1.yml  weekly-stats.yml  youtube.yml  youtube_2.yml
config/: tiktok_1.json  youtube_compte1.json  youtube_compte2.json
content/descriptions/: BREAKKINGROT.txt  CHAsderion.txt  MyChannel.txt
migrations/: 001_published_videos.sql  002_upload_history.sql  003_titan_v3_anti_shadowban.sql
src/: config.py  main.py
src/core/: alert.py  anti_shadowban.py  content_validator.py  drive.py  ip_quality.py  rate_limiter.py  safeguards.py  state.py  warming.py
src/utils/: humanizer.py  logger.py  retry.py  timing.py
tests/: test_retry.py  test_safeguards.py
